Update 01. Penetration Testing Lab Resources.md

--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -38,6 +38,8 @@ Setting up a lab environment is crucial for developing and testing offensive sec
 | **bWAPP (bee-box v1.6)** | Comprehensive web app security training platform — includes XSS, SQLi, CSRF, etc.                  | [bWAPP bee-box(ITSEC Games)](https://sourceforge.net/projects/bwapp/files/bee-box/)                   |
 | **VPLE**        | Intentionally vulnerable Linux VM (includes DVWA, Mutillidae, etc.)                                | [VPLE (Vulnhub)](https://www.vulnhub.com/entry/vulnerable-pentesting-lab-environment-1,737/)                                    |
 | **OWASP Juice Shop**     | Modern single-page web app full of vulnerabilities (XSS, IDOR, SQLi, etc.) — Docker & VM supported | [OWASP Juice Shop](https://owasp.org/www-project-juice-shop/)                                         |
+| **InfosecWarrior**| This OVA collection offers realistic, vulnerable VMs for hands-on penetration testing practice. | [Github Link InfosecWarrior](https://github.com/InfoSecWarrior/Offensive-Pentesting-Lab/tree/main/Vulnerable-OVA)
+
 
 ---
 
