--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -29,16 +29,18 @@ Setting up a lab environment is crucial for developing and testing offensive sec
 
 ---
 
-# 💾 Top Offline Virtual Machines (VulnHub and More)
+# 💾 Top Offline Virtual Machines (VulnHub and More) Donwload Mirror File
 
 | **VM Name**              | **Description**                                                                                    | **Download / Source**                                                                                       |
 | ------------------------ | -------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- |
 | **Metasploitable 1**     | Classic intentionally vulnerable Linux VM with core network flaws.                                 | [Metasploitable 1 (Vulnhub)](https://www.vulnhub.com/entry/metasploitable-1,28/) |
 | **Metasploitable 2**     | Broader range of services and real-world vulnerabilities.                                          | [Metasploitable 2 (Vulnhub)](https://www.vulnhub.com/entry/metasploitable-2,29/)    |
-| **bWAPP (bee-box v1.6)** | Comprehensive web app security training platform — includes XSS, SQLi, CSRF, etc.                  | [bWAPP bee-box(Vulnbub)](https://www.vulnhub.com/entry/bwapp-bee-box-v16,53/)                   |
+| **bWAPP (bee-box v1.6)** | Comprehensive web app security training platform — includes XSS, SQLi, CSRF, etc.                  | [bWAPP bee-box(Vulnhub)](https://www.vulnhub.com/entry/bwapp-bee-box-v16,53/)                   |
 | **VPLE**        | Intentionally vulnerable Linux VM (includes DVWA, Mutillidae, etc.)                                | [VPLE (Vulnhub)](https://www.vulnhub.com/entry/vulnerable-pentesting-lab-environment-1,737/)                                    |
 | **OWASP Juice Shop**     | Modern single-page web app full of vulnerabilities (XSS, IDOR, SQLi, etc.) — Docker & VM supported | [OWASP Juice Shop](https://owasp.org/www-project-juice-shop/)                                         |
-| **InfosecWarrior**| This OVA collection offers realistic, vulnerable VMs for hands-on penetration testing practice. | [Github Link InfosecWarrior](https://github.com/InfoSecWarrior/Offensive-Pentesting-Lab/tree/main/Vulnerable-OVA)
+| **HealthCare** | This VM is crafted to train your brain in true OSCP style. | [Healthcare (Vulnhub)](https://www.vulnhub.com/entry/healthcare-1,522/)
+| **InfosecWarrior**| This OVA collection offers realistic, vulnerable VMs for hands-on penetration testing practice. | [Github Link InfosecWarrior](https://github.com/InfoSecWarrior/Offensive-Pentesting-Lab/tree/main/Vulnerable-OVA) |
+
 
 
 ---
