Update 01. Penetration Testing Lab Resources.md

--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -29,7 +29,7 @@ Setting up a lab environment is crucial for developing and testing offensive sec
 
 ---
 
-# 💾 Top Offline Virtual Machines (VulnHub and More) Donwload Mirror File
+# 💾 Top Offline Virtual Machines (VulnHub and More) Download Mirror File
 
 | **VM Name**              | **Description**                                                                                    | **Download / Source**                                                                                       |
 | ------------------------ | -------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- |
