Update 01. Penetration Testing Lab Resources.md

--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -41,7 +41,13 @@ Setting up a lab environment is crucial for developing and testing offensive sec
 | **HealthCare** | This VM is crafted to train your brain in true OSCP style. | [Healthcare (Vulnhub)](https://www.vulnhub.com/entry/healthcare-1,522/)
 | **InfosecWarrior**| This OVA collection offers realistic, vulnerable VMs for hands-on penetration testing practice. | [Github Link InfosecWarrior](https://github.com/InfoSecWarrior/Offensive-Pentesting-Lab/tree/main/Vulnerable-OVA) |
 
+---
 
+### 📺 Vulnerable Machine Installation (VirtualBox)
+
+🔗 [Watch on YouTube](https://youtu.be/PyW7JFPZP8g) — *Step-by-step guide to install and run a vulnerable machine on VirtualBox for ethical hacking and penetration testing practice.*
+
+> 🎯 Perfect for beginners setting up their first vulnerable lab using VirtualBox.
 
 ---
 
