Update 03. ICMP Ping.md

--- a/4. Network Reconnaissance Scanning/03. ICMP Ping.md
+++ b/4. Network Reconnaissance Scanning/03. ICMP Ping.md
@@ -15,7 +15,7 @@ This back-and-forth exchange:
 * Measures **latency (round-trip time)**
 * Helps identify **packet loss or network issues**
 
-🧠 **Key Point:**
+> 🧠 **Key Point:**
 Ping is not a protocol itself — it's a utility that leverages **ICMP**, a core part of the Internet Protocol Suite, to function.
 
 ---
@@ -84,12 +84,13 @@ A **ping sweep**, also known as an **ICMP sweep**, is a method used to identify 
 ### 🪟 Windows Ping Commands
 
 ```bash
-ping 192.168.129.144                    # Basic check
-ping 192.168.129.144 -t                 # Continuous ping
-ping 192.168.129.144 -n 50              # Send 50 requests
-ping 192.168.129.144 -l 5000            # Custom packet size
-ping 192.168.129.144 -w 2000            # Set timeout to 2 seconds
-ping 192.168.129.144 -l 65500 -t        # Max packet size, infinite ping
+ping 192.168.1.1                        # Basic ping check
+ping 192.168.1.1 -t                     # Continuous ping
+ping 192.168.1.1 -n 50                  # Send 50 ICMP echo requests
+ping 192.168.1.1 -l 5000                # Set packet size to 5000 bytes
+ping 192.168.1.1 -w 2000                # Timeout after 2000ms (2 sec)
+ping 192.168.1.1 -l 5000 -t             # Continuous ping with 5000 byte packets
+ping 192.168.1.1 -l 65500 -t            # Infinite ping with max packet size
 ```
 
 **Options Breakdown:**
@@ -110,14 +111,18 @@ FOR /L %i IN (1,1,254) DO @ping -n 1 -w 500 192.168.1.%i | FIND "TTL="
 ### 🐧 Linux Ping Commands
 
 ```bash
-ping 8.8.8.8                                  # Google DNS
-ping 8.8.8.8 -c 2                             # Send 2 pings
-ping 192.168.129.144 -s 65500                 # Send max-sized packets
-ping -I eth0 192.168.129.144 -s 65500 -c 4    # Use specific interface
-ping 192.168.129.144 -i 10 -c 2               # Ping with 10 sec interval
-ping 192.168.129.144 -p 42                    # Fill with pattern
-ping -6 google.com                            # Ping using IPv6
-ping -f 192.168.129.144                       # Flood ping (⚠️ root required)
+ping 8.8.8.8                                # Basic ping to Google DNS
+ping 8.8.8.8 -c 2                           # Send 2 echo requests
+ping 192.168.1.1 -s 65500                   # Send large packets (65500 bytes)
+ping -I eth0 192.168.1.1 -s 65500 -c 4      # Use eth0 to send 4 large packets
+ping 192.168.1.1 -i 10 -c 2                 # Send 2 pings at 10-second intervals
+ping 192.168.1.1 -i 10 -c 2 -p 42           # Same as above, with byte pattern 42 (hex)
+ping armourinfosec.com                      # Ping with DNS resolution
+ping -6 google.com                          # Ping IPv6 hostname
+ping -6 -i 10 -c 2 -p 42                    # IPv6 ping with pattern, delay, and count
+ping 192.168.1.1 -f                         # Flood ping (root required)
+ping 192.168.1.1 -f -s 65500                # Flood with max-size packets (root required)
+
 ```
 
 **Options Recap:**
