Update 03. ICMP Ping.md

--- a/4. Network Reconnaissance Scanning/03. ICMP Ping.md
+++ b/4. Network Reconnaissance Scanning/03. ICMP Ping.md
@@ -119,7 +119,7 @@ ping 192.168.129.80 -i 10 -c 2                 # Send 2 pings at 10-second inter
 ping 192.168.129.80 -i 10 -c 2 -p 42           # Same as above, with byte pattern 42 (hex)
 ping armourinfosec.com                      # Ping with DNS resolution
 ping -6 google.com                          # Ping IPv6 hostname
-ping -6 -i 10 -c 2 -p 42                    # IPv6 ping with pattern, delay, and count
+ping -6 google.com -i 10 -c 2 -p 42                    # IPv6 ping with pattern, delay, and count
 ping 192.168.129.80 -f                         # Flood ping (root required)
 ping 192.168.129.80 -f -s 65500                # Flood with max-size packets (root required)
 
