--- a/4. Network Reconnaissance Scanning/04. Arping.md
+++ b/4. Network Reconnaissance Scanning/04. Arping.md
@@ -54,7 +54,7 @@ Sends ARP requests to the IP address and returns replies with MAC address and re
 
 ### 1. Basic Command Without Arguments
 
-Displays help or waits for an IP to send ARP requests to. Without a target IP or valid options, it usually does nothing.
+> Displays help or waits for an IP to send ARP requests to. Without a target IP or valid options, it usually does nothing.
 
 ```bash
 arping
@@ -64,7 +64,7 @@ arping
 
 ### 2. Send ARP Requests to a Host
 
-Sends ARP requests continuously to the IP `192.168.1.11` until manually stopped. Useful for checking if the device responds to ARP.
+> Sends ARP requests continuously to the IP `192.168.1.11` until manually stopped. Useful for checking if the device responds to ARP.
 
 ```bash
 arping 192.168.1.11
@@ -74,7 +74,7 @@ arping 192.168.1.11
 
 ### 3. Send a Single ARP Request
 
-Sends exactly **one ARP request** and then stops. Useful for quick checks or in scripts.
+> Sends exactly **one ARP request** and then stops. Useful for quick checks or in scripts.
 
 ```bash
 arping -c 1 192.168.1.11
@@ -84,7 +84,7 @@ arping -c 1 192.168.1.11
 
 ### 4. Specify Source MAC Address
 
-Sets the source MAC address to `98:28:a6:04:19:2c` for outgoing ARP requests. Useful for **advanced testing** or **MAC spoofing**.
+> Sets the source MAC address to `98:28:a6:04:19:2c` for outgoing ARP requests. Useful for **advanced testing** or **MAC spoofing**.
 
 ```bash
 arping -s 98:28:a6:04:19:2c 192.168.1.11
@@ -94,7 +94,7 @@ arping -s 98:28:a6:04:19:2c 192.168.1.11
 
 ### 5. Send One ARP Request with Custom Source MAC
 
-Combines a **single ARP request** (`-c 1`) with a **custom source MAC address** for IP `192.168.1.51`.
+> Combines a **single ARP request** (`-c 1`) with a **custom source MAC address** for IP `192.168.1.51`.
 
 ```bash
 arping -c 1 -s 98:28:a6:04:19:2c 192.168.1.51
@@ -104,7 +104,7 @@ arping -c 1 -s 98:28:a6:04:19:2c 192.168.1.51
 
 ### 6. Send Two ARP Requests on a Specific Interface with Custom MAC
 
-Sends **two ARP requests** from interface `eth0` using source MAC `98:28:a6:04:19:2c` to `192.168.1.25`.
+> Sends **two ARP requests** from interface `eth0` using source MAC `98:28:a6:04:19:2c` to `192.168.1.25`.
 
 ```bash
 arping -c 2 -s 98:28:a6:04:19:2c -i eth0 192.168.1.25
@@ -114,9 +114,9 @@ arping -c 2 -s 98:28:a6:04:19:2c -i eth0 192.168.1.25
 
 ### 7. Send 10 ARP Requests with Interface and Source MAC
 
-Sends **10 ARP requests** from interface `eth0` with source MAC `08:00:27:fb:70:09` to `192.168.1.31`.
+> Sends **10 ARP requests** from interface `eth0` with source MAC `08:00:27:fb:70:09` to `192.168.1.31`.
 
-**Note:** Original command had errors — corrected syntax and added `-c 10`.
+>  **Note:** Original command had errors — corrected syntax and added `-c 10`.
 
 ```bash
 arping -s 08:00:27:fb:70:09 -c 10 -i eth0 192.168.1.31
