--- a/4. Network Reconnaissance Scanning/04. Arping.md
+++ b/4. Network Reconnaissance Scanning/04. Arping.md
@@ -131,7 +131,10 @@ arping -s 08:00:27:fb:70:09 -c 10 -i eth0 192.168.1.31
 ## Subnet Scan Using arping (Bash Script)
 
 ```bash
-for i in {1..254}; do arping -c 1 192.168.1.$i done
+for i in {1..254}; do
+  arping -c 1 192.168.129.$i
+done
+
 ```
 
 * Iterates through the 192.168.1.0/24 subnet.
