--- a/4. Network Reconnaissance Scanning/04. Arping.md
+++ b/4. Network Reconnaissance Scanning/04. Arping.md
@@ -143,7 +143,7 @@ done
 
 ---
 
-## Combined ICMP Ping and ARPing Script
+## Combined ICMP Ping and ARPing Script Check Online or Active
 
 ```bash
 #!/bin/bash
