--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -19,7 +19,7 @@ It is widely used in network diagnostics, firewall testing, port scanning, trace
 
 ---
 
-### Common `hping3` Usage and Flag Examples
+# Common `hping3` Usage and Flag Examples
 
 #### Display help or usage information
 
