--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -118,7 +118,7 @@ hping3 -T 8.8.8.8
 
 ---
 
-### `hping3` TCP Flags Overview
+# `hping3` TCP Flags Overview
 
 You can manipulate TCP flags for deep network testing. Each flag serves a specific purpose in networking and security analysis.
 
