--- a/4. Network Reconnaissance Scanning/05. fping.md
+++ b/4. Network Reconnaissance Scanning/05. fping.md
@@ -128,7 +128,9 @@ fping 192.168.129.80 192.168.129.31 192.168.129.61
 ```php
 fping -f ip.txt
 ```
-
+> Wireshark Filter for alive : icpm
+> Wireshark Filter for unreachable : arp
+ 
 #### Ping all hosts in a subnet using CIDR
 
 ```php
