--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -130,50 +130,52 @@ hping3 -v
 #### Send RAW IP packets to a target
 
 ```php
-hping3 -0 192.168.129.51
-hping3 --rawip 192.168.129.51
+hping3 -0 192.168.129.145
+```
+```php
+hping3 --rawip 192.168.129.145
 ```
 
 #### Send a specific number of packets
 
 ```php
-hping3 -c 2 192.168.129.51
+hping3 -c 2 192.168.129.145
 ```
 
 #### ICMP mode (similar to `ping`, but with more control)
 
 ```php
-hping3 -1 192.168.129.51
+hping3 -1 192.168.129.145
 ```
 ```php
-hping3 --icmp 192.168.129.51
+hping3 --icmp 192.168.129.145
 ```
 ```php
-hping3 --icmp -c 2 192.168.129.51
+hping3 --icmp -c 2 192.168.129.145
 ```
 
 #### UDP mode
 
 ```php
-hping3 -2 192.168.129.51
+hping3 -2 192.168.129.145
 ```
 ```php
-hping3 --udp 192.168.129.51
+hping3 --udp 192.168.129.145
 ```
 
 #### TCP port scanning (scanning a range)
 
 ```php
-hping3 -8 80-1000 192.168.129.51
+hping3 -8 80-1000 192.168.129.145
 ```
 ```php
-hping3 --scan 80-1000 192.168.129.51
+hping3 --scan 80-1000 192.168.129.145
 ```
 
 #### Scan specific ports with SYN flag and verbose output
 
 ```php
-hping3 --scan 1-30,70-90 -S 192.168.129.51
+hping3 --scan 1-30,70-90 -S 192.168.129.145
 ```
 ```php
 hping3 --scan 1-30,70-90 -S m.armourinfosec.com
@@ -182,22 +184,22 @@ hping3 --scan 1-30,70-90 -S m.armourinfosec.com
 #### Scan specific ports with FIN flag
 
 ```php
-hping3 -8 80,443 -F 192.168.129.51
+hping3 -8 80,443 -F 192.168.129.145
 ```
 ```php
-hping3 --scan 80,443 -F 192.168.129.51
+hping3 --scan 80,443 -F 192.168.129.145
 ```
 
 #### Spoof source IP address
 
 ```php
-hping3 -a 192.168.129.15 192.168.129.51
+hping3 -a 192.168.129.15 192.168.129.145
 ```
 
 #### Force specific ICMP code
 
 ```php
-hping3 -K --force-icmp 192.168.129.51
+hping3 -K --force-icmp 192.168.129.145
 ```
 
 #### Perform a traceroute
@@ -229,49 +231,49 @@ You can manipulate TCP flags for deep network testing. Each flag serves a specif
 #### URG flag only
 
 ```php
-hping3 -U 192.168.129.51
+hping3 -U 192.168.129.145
 ```
 
 #### UDP mode with URG flag (experimental)
 
 ```php
-hping3 -2 -U 192.168.129.51
+hping3 -2 -U 192.168.129.145
 ```
 
 #### FIN flag (stealth scan)
 
 ```php
-hping3 -F 192.168.129.51
+hping3 -F 192.168.129.145
 ```
 
 #### SYN flag (SYN scan for open ports)
 
 ```php
-hping3 -S 192.168.129.51
+hping3 -S 192.168.129.145
 ```
 
 #### RST flag (reset packets for closing connections)
 
 ```php
-hping3 -R 192.168.129.51
+hping3 -R 192.168.129.145
 ```
 
 #### PSH flag
 
 ```php
-hping3 -P 192.168.129.51
+hping3 -P 192.168.129.145
 ```
 
 #### ACK flag
 
 ```php
-hping3 -A 192.168.129.51
+hping3 -A 192.168.129.145
 ```
 
 #### XMAS scan (FIN + PSH + URG)
 
 ```php
-hping3 -X 192.168.129.51
+hping3 -X 192.168.129.145
 ```
 
 ---
