--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -178,7 +178,7 @@ hping3 --scan 80-1000 192.168.129.145
 hping3 --scan 1-30,70-90 -S 192.168.129.145
 ```
 ```php
-hping3 --scan 1-30,70-90 -S m.armourinfosec.com
+hping3 --scan 1-30,70-90 -S armourinfosec.com
 ```
 
 #### Scan specific ports with FIN flag
