--- a/4. Network Reconnaissance Scanning/07. nping.md
+++ b/4. Network Reconnaissance Scanning/07. nping.md
@@ -1,4 +1,4 @@
-## nping
+# nping
 **nping** is a free, open-source network packet generation tool and advanced ping utility. Part of the **Nmap suite**, it allows users to craft and send customized network packets across multiple protocols such as *TCP*, *UDP*, *ICMP*, and *ARP*, with fine-grained control over packet headers and payloads. Beyond basic host availability checks, nping can be used for advanced network testing, such as stack stress testing, ARP poisoning, denial-of-service (DoS) simulations, route tracing, and response time measurement. It features an **Echo Mode**, which helps analyze packet transit—useful for troubleshooting firewalls, diagnosing network path issues, and detecting packet corruption. nping runs on **Linux, Windows, BSD, and macOS**, and is highly flexible for diverse network measurement and security auditing needs.
 
 ### Key Features
@@ -13,6 +13,8 @@
 > **Note:** nping requires appropriate privileges for raw socket operations and should be used responsibly, as it can generate high network traffic.
 
 **In summary:** nping extends the traditional ping utility with powerful packet crafting and analysis capabilities, making it ideal for network professionals and security experts.
+
+---
 
 ### Command Examples
 
@@ -92,8 +94,9 @@ Useful for running echo tests from other nping clients:
 ```bash
 nping --echo-server "public"
 ```
+---
 
-## nping UDP Mode Examples
+# nping UDP Mode Examples
 
 Nping can generate UDP packets for network testing, discovery, and diagnostics. Here are practical UDP examples:
 
@@ -172,3 +175,5 @@ nping --udp -p 1337 --data-string "CustomMessage" -c 2 192.168.129.60
 - `--badsum` : Use invalid UDP checksum.
 
 For UDP-based device/service testing, combine these options as needed for your scenario. Run with elevated privileges if packet spoofing or special flags are required.
+
+---
