--- a/4. Network Reconnaissance Scanning/07. nping.md
+++ b/4. Network Reconnaissance Scanning/07. nping.md
@@ -19,77 +19,77 @@
 ### Command Examples
 
 #### 1. Show help information
-Prints detailed help about nping options and usage:
+> Prints detailed help about nping options and usage:
 
 ```bash
 nping --help
 ```
 
 #### 2. Basic ping to a host (ICMP by default)
-Sends ICMP echo requests to dns.google and shows response times:
+> Sends ICMP echo requests to dns.google and shows response times:
 
 ```bash
 nping dns.google
 ```
 
 #### 3. Send ARP request to a single IP on your local network
-Checks if 192.168.129.60 responds to ARP (Layer 2 check):
+> Checks if 192.168.129.60 responds to ARP (Layer 2 check):
 
 ```bash
 nping --arp 192.168.129.60
 ```
 
 #### 4. Send only one ARP request
-`-c 1` sends exactly one packet:
+> `-c 1` sends exactly one packet:
 
 ```bash
 nping --arp 192.168.129.60 -c 1
 ```
 
 #### 5. ARP scan on a subnet
-Sends one ARP request to each IP in 192.168.129.80/24:
+> Sends one ARP request to each IP in 192.168.129.80/24:
 
 ```bash
 nping --arp 192.168.129.80/24 -c 1
 ```
 
 #### 6. ARP requests to a list of IPs
-Comma-separated IPs: 192.168.129.31, .60, .200, .145
+> Comma-separated IPs: 192.168.129.31, .60, .200, .145
 
 ```bash
 nping --arp 192.168.129.31,60,200,145 -c 1
 ```
 
 #### 7. TCP packets to port 80 with TTL=2
-For checking router/firewall response:
+> For checking router/firewall response:
 
 ```bash
 nping --tcp -p 80 --ttl 2 192.168.129.145
 ```
 
 #### 8. ICMP "time exceeded" packets
-Used for traceroute/diagnostics:
+> Used for traceroute/diagnostics:
 
 ```bash
 nping --icmp --icmp-type time-exceeded 192.168.129.10
 ```
 
 #### 9. Test if TCP port 443 is open (SYN scan)
-Checks if HTTPS port is listening:
+> Checks if HTTPS port is listening:
 
 ```bash
 nping --tcp -p 443 192.168.129.60
 ```
 
 #### 10. Send TCP RST packet to port 443 with TTL=2
-Resets TCP connection (useful for firewalls):
+> Resets TCP connection (useful for firewalls):
 
 ```bash
 nping --tcp -p 443 --flags RST --ttl 2 192.168.129.60
 ```
 
 #### 11. Start an Nping Echo Server with passphrase "public"
-Useful for running echo tests from other nping clients:
+> Useful for running echo tests from other nping clients:
 
 ```bash
 nping --echo-server "public"
@@ -101,45 +101,45 @@ nping --echo-server "public"
 Nping can generate UDP packets for network testing, discovery, and diagnostics. Here are practical UDP examples:
 
 #### 1. Send a UDP packet to a host (default port 33434)
-Sends a probe to 192.168.129.145:
+> Sends a probe to 192.168.129.145:
 
 ```bash
 nping --udp 192.168.129.145
 ```
 
 #### 2. Specify UDP destination port
-Target port 53 (DNS):
+> Target port 53 (DNS):
 
 ```bash
 nping --udp -p 53 192.168.129.145
 ```
 
 #### 3. Multiple/range of UDP ports
-- Multiple:  
+> Multiple:  
   ```bash
   nping --udp -p 53,161,12345,80 192.168.129.145
   ```
-- Range:  
+> Range:  
   ```bash
   nping --udp -p 1000-1010 192.168.129.145
   ```
 
 #### 4. Spoof source port (requires privileges)
-Set source port to 50505:
+> Set source port to 50505:
 
 ```bash
 sudo nping --udp -g 50505 -p 53 192.168.129.145
 ```
 
 #### 5. Send a set number of UDP packets
-Sends 5 UDP packets:
+> Sends 5 UDP packets:
 
 ```bash
 nping --udp -p 53 -c 5 192.168.129.145
 ```
 
 #### 6. UDP packet with ASCII custom data
-Sends "HelloUDP" as payload:
+> Sends "HelloUDP" as payload:
 
 ```bash
 nping --udp -p 1337 --data-string "HelloUDP" 192.168.129.60
@@ -152,7 +152,7 @@ nping --udp -p 53 --data-length 100 192.168.129.60
 ```
 
 #### 8. UDP packet with invalid checksum (for testing)
-Makes the packet non-RFC compliant:
+> Makes the packet non-RFC compliant:
 
 ```bash
 sudo nping --udp --badsum -p 53 192.168.129.60
