--- a/4. Network Reconnaissance Scanning/07. nping.md
+++ b/4. Network Reconnaissance Scanning/07. nping.md
@@ -21,8 +21,12 @@
 #### 1. Show help information
 > Prints detailed help about nping options and usage:
 
-```bash
+```php
 nping --help
+```
+> OR
+```php
+nping -h
 ```
 #### Output
 ```php
@@ -152,70 +156,70 @@ SEE THE MAN PAGE FOR MANY MORE OPTIONS, DESCRIPTIONS, AND EXAMPLES
 #### 2. Basic ping to a host (ICMP by default)
 > Sends ICMP echo requests to dns.google and shows response times:
 
-```bash
+```php
 nping dns.google
 ```
 
 #### 3. Send ARP request to a single IP on your local network
 > Checks if 192.168.129.4 responds to ARP (Layer 2 check):
 
-```bash
+```php
 nping --arp 192.168.129.4
 ```
 
 #### 4. Send only one ARP request
 > `-c 1` sends exactly one packet:
 
-```bash
+```php
 nping --arp 192.168.129.4 -c 1
 ```
 
 #### 5. ARP scan on a subnet
 > Sends one ARP request to each IP in 192.168.129.80/24:
 
-```bash
+```php
 nping --arp 192.168.129.80/24 -c 1
 ```
 
 #### 6. ARP requests to a list of IPs
 > Comma-separated IPs: 192.168.129.31, .60, .200, .145
 
-```bash
+```php
 nping --arp 192.168.129.31,60,200,145 -c 1
 ```
 
 #### 7. TCP packets to port 80 with TTL=2
 > For checking router/firewall response:
 
-```bash
+```php
 nping --tcp -p 80 --ttl 2 192.168.129.145
 ```
 
 #### 8. ICMP "time exceeded" packets
 > Used for traceroute/diagnostics:
 
-```bash
+```php
 nping --icmp --icmp-type time-exceeded 192.168.129.10
 ```
 
 #### 9. Test if TCP port 443 is open (SYN scan)
 > Checks if HTTPS port is listening:
 
-```bash
+```php
 nping --tcp -p 443 192.168.129.4
 ```
 
 #### 10. Send TCP RST packet to port 443 with TTL=2
 > Resets TCP connection (useful for firewalls):
 
-```bash
+```php
 nping --tcp -p 443 --flags RST --ttl 2 192.168.129.4
 ```
 
 #### 11. Start an Nping Echo Server with passphrase "public"
 > Useful for running echo tests from other nping clients:
 
-```bash
+```php
 nping --echo-server "public"
 ```
 ---
@@ -227,64 +231,64 @@ Nping can generate UDP packets for network testing, discovery, and diagnostics. 
 #### 1. Send a UDP packet to a host (default port 33434)
 > Sends a probe to 192.168.129.145:
 
-```bash
+```php
 nping --udp 192.168.129.145
 ```
 
 #### 2. Specify UDP destination port
 > Target port 53 (DNS):
 
-```bash
+```php
 nping --udp -p 53 192.168.129.145
 ```
 
 #### 3. Multiple/range of UDP ports
 > Multiple:  
-  ```bash
+  ```php
   nping --udp -p 53,161,12345,80 192.168.129.145
   ```
 > Range:  
-  ```bash
+  ```php
   nping --udp -p 1000-1010 192.168.129.145
   ```
 
 #### 4. Spoof source port (requires privileges)
 > Set source port to 50505:
 
-```bash
+```php
 sudo nping --udp -g 50505 -p 53 192.168.129.145
 ```
 
 #### 5. Send a set number of UDP packets
 > Sends 5 UDP packets:
 
-```bash
+```php
 nping --udp -p 53 -c 5 192.168.129.145
 ```
 
 #### 6. UDP packet with ASCII custom data
 > Sends "HelloUDP" as payload:
 
-```bash
+```php
 nping --udp -p 1337 --data-string "HelloUDP" 192.168.129.4
 ```
 
 #### 7. UDP packet with 100 bytes random data
 
-```bash
+```php
 nping --udp -p 53 --data-length 100 192.168.129.4
 ```
 
 #### 8. UDP packet with invalid checksum (for testing)
 > Makes the packet non-RFC compliant:
 
-```bash
+```php
 sudo nping --udp --badsum -p 53 192.168.129.4
 ```
 
 #### 9. Send 2 UDP packets with custom message to a server
 
-```bash
+```php
 nping --udp -p 1337 --data-string "CustomMessage" -c 2 192.168.129.4
 ```
 
