Update 08. Nmap (Network Mapper).md

--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -14,7 +14,6 @@
 
 These features make Nmap invaluable for administrators, security professionals, and auditors seeking to secure and understand networks.
 
----
 
 ## What is Nmap?
 
@@ -27,8 +26,6 @@ Sends specially crafted packets to target hosts and analyzes responses to identi
 ### Compatibility:
 
 Runs on Linux, Windows, macOS, BSD, Solaris, etc. with both command-line and GUI (Zenmap) interfaces.
-
----
 
 ## Key Features
 
@@ -55,8 +52,6 @@ nmap -sO 192.168.1.1               # Protocol scan
 nmap -S 192.168.1.100 192.168.1.1  # IP spoofing  
 ```
 
----
-
 ## 2. Transport Layer (Layer 4)
 
 * Port scanning (TCP & UDP) with various techniques
@@ -73,9 +68,7 @@ nmap -sU -p 53 192.168.1.1
 nmap -sV 192.168.1.1  
 ```
 
----
-
-## Network Layer in Nmap
+## Network Network Layer (Layer 3)
 
 The Network Layer (Layer 3) manages routing and movement of packets across networks. Nmap utilizes this layer for advanced discovery and scanning.
 
@@ -109,7 +102,6 @@ The Network Layer (Layer 3) manages routing and movement of packets across netwo
 
 Nmap’s Network Layer capabilities allow it to probe, enumerate, and bypass security, providing detailed visibility into topology and host availability using multiple stealth methods.
 
----
 
 ## Transport Layer in Nmap (Layer 4 – OSI Model)
 
@@ -177,8 +169,8 @@ sudo yum install nmap
 ```
 
 ### Unix Platforms (Solaris, FreeBSD, NetBSD, OpenBSD) - From Source:
-
-```
+> Download (nmap-7.97.tar.bz2)[https://nmap.org/dist/nmap-7.97.tar.bz2]
+```php
 bzip2 -dc nmap-*.tar.bz2 | tar xvf -  
 cd nmap-*  
 ./configure  
@@ -201,26 +193,42 @@ sudo make install
 
 ```
 nmap -h  
+```
+> Or
+```
 nmap --help  
 ```
 
 ### Check Nmap Version
 
 ```
-nmap -V  
+nmap -V
+```
+> Or
+```
 nmap --version  
 ```
 
 ### Basic Scanning
 
+- Scan specific IP
+```php
+nmap 192.168.1.35
 ```
-nmap 192.168.1.35                   # Scan specific IP  
-nmap target.com                    # Scan hostname/domain  
-nmap -v 192.168.1.35               # Verbose scan  
-nmap -v scanme.nmap.org           # Scan authorized test server  
+- Scan hostname/domain
+```php                  
+nmap target.com
+```
+- Verbose scan
+```php                      
+nmap -v 192.168.1.35                 
+```
+- Scan authorized test server  
+```php
+nmap -v scanme.nmap.org
 ```
 
-Note: `scanme.nmap.org` is provided by the Nmap project for public testing.
+> Note: `scanme.nmap.org` is provided by the Nmap project for public testing.
 
 ---
 
