Update 08. Nmap (Network Mapper).md

--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -67,8 +67,9 @@ nmap -sS 192.168.1.1
 nmap -sU -p 53 192.168.1.1  
 nmap -sV 192.168.1.1  
 ```
+---
 
-## Network Network Layer (Layer 3)
+# Network Network Layer (Layer 3)
 
 The Network Layer (Layer 3) manages routing and movement of packets across networks. Nmap utilizes this layer for advanced discovery and scanning.
 
@@ -103,7 +104,7 @@ The Network Layer (Layer 3) manages routing and movement of packets across netwo
 Nmap’s Network Layer capabilities allow it to probe, enumerate, and bypass security, providing detailed visibility into topology and host availability using multiple stealth methods.
 
 
-## Transport Layer in Nmap (Layer 4 – OSI Model)
+# Transport Layer in Nmap (Layer 4 – OSI Model)
 
 The Transport Layer ensures reliable end-to-end communication. Nmap leverages this layer for scanning and analyzing network services.
 
