Update 08. Nmap (Network Mapper).md

--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -69,7 +69,7 @@ nmap -sV 192.168.1.1
 ```
 ---
 
-# Network Network Layer (Layer 3)
+# Network Network Layer (Layer 3 – OSI Model))
 
 The Network Layer (Layer 3) manages routing and movement of packets across networks. Nmap utilizes this layer for advanced discovery and scanning.
 
