Update 08. Nmap (Network Mapper).md

--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -69,6 +69,9 @@ nmap -sV 192.168.1.1
 ```
 ---
 
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/Nmap.png" alt="Nmap Image">
+
+---
 # Network Network Layer (Layer 3 – OSI Model)
 
 The Network Layer (Layer 3) manages routing and movement of packets across networks. Nmap utilizes this layer for advanced discovery and scanning.
