Update 08. Nmap (Network Mapper).md

--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -173,7 +173,9 @@ sudo yum install nmap
 ```
 
 ### Unix Platforms (Solaris, FreeBSD, NetBSD, OpenBSD) - From Source:
-- Download (nmap-7.97.tar.bz2)[https://nmap.org/dist/nmap-7.97.tar.bz2]
+
+- [Download (nmap-7.97.tar.bz2)](https://nmap.org/dist/nmap-7.97.tar.bz2)
+
 ```php
 bzip2 -dc nmap-*.tar.bz2 | tar xvf -  
 cd nmap-*  
