Update 10. Nmap 2.md

--- a/4. Network Reconnaissance Scanning/10. Nmap 2.md
+++ b/4. Network Reconnaissance Scanning/10. Nmap 2.md
@@ -157,26 +157,6 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 
 ---
 
-# **Protocol Header Fields Manipulation in Nmap**
-
-| Protocol | Header Field        | Nmap Usage Description                                                 |
-|----------|---------------------|-----------------------------------------------------------------------|
-| IP       | TTL                 | OS detection and hop counting (`-O`, `--ttl`)                         |
-| IP       | Flags               | Fragmentation and stealth scans (`-f`)                                |
-| IP       | Source IP           | IP spoofing (`-S`)                                                    |
-| IP       | Protocol            | IP protocol scan (`-sO`)                                              |
-| TCP      | Flags               | Scan types (SYN, FIN, ACK, etc.) (`-sS`, `-sF`, `-sA`)                |
-| TCP      | Source Port         | Spoofing to evade firewalls (`--source-port`)                         |
-| TCP      | Destination Port    | Target ports (`-p`)                                                   |
-| TCP      | Options             | Custom TCP packet crafting (`--tcp-options`)                          |
-| UDP      | Source Port         | Set source port to bypass filtering (`--source-port`)                 |
-| UDP      | Destination Port    | Target UDP services (`-p`)                                            |
-| ICMP     | Type                | Used in ping and traceroute (Types 0, 3, 8, 11)                       |
-| ICMP     | Code                | Provides additional message info                                      |
-
----
-
-
 # **Internet Control Message Protocol (ICMP) and Its Role in Nmap Scans**
 
 > ICMP operates at the network (Layer 3) of the OSI model and is crucial for network diagnostics, error reporting, and control—not for data transfer. Nmap uses ICMP extensively to map networks and assess hosts and security devices.
@@ -222,4 +202,34 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 **Summary:**
 ICMP gives Nmap the ability to perform effective network mapping, device discovery, and route analysis, making it an essential protocol for both administrators and security testers. Nmap leverages ICMP message types and header fields strategically to gather information and adapt to different network conditions and protections.
 
+---
+
+
+
+
+# **Protocol Header Fields Manipulation in Nmap**
+
+| Protocol | Header Field        | Nmap Usage Description                                                 |
+|----------|---------------------|-----------------------------------------------------------------------|
+| IP       | TTL                 | OS detection and hop counting (`-O`, `--ttl`)                         |
+| IP       | Flags               | Fragmentation and stealth scans (`-f`)                                |
+| IP       | Source IP           | IP spoofing (`-S`)                                                    |
+| IP       | Protocol            | IP protocol scan (`-sO`)                                              |
+| TCP      | Flags               | Scan types (SYN, FIN, ACK, etc.) (`-sS`, `-sF`, `-sA`)                |
+| TCP      | Source Port         | Spoofing to evade firewalls (`--source-port`)                         |
+| TCP      | Destination Port    | Target ports (`-p`)                                                   |
+| TCP      | Options             | Custom TCP packet crafting (`--tcp-options`)                          |
+| UDP      | Source Port         | Set source port to bypass filtering (`--source-port`)                 |
+| UDP      | Destination Port    | Target UDP services (`-p`)                                            |
+| ICMP     | Type                | Used in ping and traceroute (Types 0, 3, 8, 11)                       |
+| ICMP     | Code                | Provides additional message info                                      |
+
+---
+
+
+## TCP Three-Way Handshake in Nmap Scans
+
+* **SYN**: Client initiates connection, sends sequence number
+* **SYN-ACK**: Server responds with its sequence number
+* **ACK**: Client acknowledges the sequence; connection is established
 ---
